--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
 
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
 
       - uses: actions/setup-python@v2
 
